# mkdocs-pydantic

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: docs.yaml  lint.yaml  publish_docs.yaml  test.yaml
docs/: index.md
docs/static/: index.md
src/mkdocs_pydantic/: __init__.py  make_md.py  plugin.py  structs.py
src/mkdocs_pydantic_example/: __init__.py  settings.py
src/mkdocs_pydantic_examples/: __init__.py  single.py  three_levels.py  two_levels.py
tests/: test_make_md.py  test_plugin.py  test_structs.py
